@@ -1,5 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-2.4.4:
+  * enhancement: try to find source locations for code expanded from macros
+    that copy its input forms. When (> debug 1).
+
 changes in sbcl-2.4.4 relative to sbcl-2.4.3:
   * minor incompatible change: after-GC hooks are now called in the finalizer
     thread on threaded builds.
